--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "lokijs": "^1.4.1"
+    "lokijs": "^1.4.1",
+    "twitter": "^1.4.0"
   }
 }
