--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^2.0.0",
+    "ejs": "^2.5.1",
     "express": "^4.14.0",
     "lokijs": "^1.4.1",
     "twitter": "^1.4.0"
